; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_kpi_vfs.c_vn_remove.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_kpi_vfs.c_vn_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nameidata = type { i32 }
%struct.vnode_attr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vn_remove(i32 %0, i32* %1, %struct.nameidata* %2, i32 %3, %struct.vnode_attr* %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca %struct.nameidata*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.vnode_attr*, align 8
  %13 = alloca i32, align 4
  store i32 %0, i32* %8, align 4
  store i32* %1, i32** %9, align 8
  store %struct.nameidata* %2, %struct.nameidata** %10, align 8
  store i32 %3, i32* %11, align 4
  store %struct.vnode_attr* %4, %struct.vnode_attr** %12, align 8
  store i32 %5, i32* %13, align 4
  %14 = load i32, i32* %8, align 4
  %15 = call i64 @vnode_compound_remove_available(i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %25

17:                                               ; preds = %6
  %18 = load i32, i32* %8, align 4
  %19 = load i32*, i32** %9, align 8
  %20 = load %struct.nameidata*, %struct.nameidata** %10, align 8
  %21 = load i32, i32* %11, align 4
  %22 = load %struct.vnode_attr*, %struct.vnode_attr** %12, align 8
  %23 = load i32, i32* %13, align 4
  %24 = call i32 @VNOP_COMPOUND_REMOVE(i32 %18, i32* %19, %struct.nameidata* %20, i32 %21, %struct.vnode_attr* %22, i32 %23)
  store i32 %24, i32* %7, align 4
  br label %34

25:                                               ; preds = %6
  %26 = load i32, i32* %8, align 4
  %27 = load i32*, i32** %9, align 8
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.nameidata*, %struct.nameidata** %10, align 8
  %30 = getelementptr inbounds %struct.nameidata, %struct.nameidata* %29, i32 0, i32 0
  %31 = load i32, i32* %11, align 4
  %32 = load i32, i32* %13, align 4
  %33 = call i32 @VNOP_REMOVE(i32 %26, i32 %28, i32* %30, i32 %31, i32 %32)
  store i32 %33, i32* %7, align 4
  br label %34

34:                                               ; preds = %25, %17
  %35 = load i32, i32* %7, align 4
  ret i32 %35
}

declare dso_local i64 @vnode_compound_remove_available(i32) #1

declare dso_local i32 @VNOP_COMPOUND_REMOVE(i32, i32*, %struct.nameidata*, i32, %struct.vnode_attr*, i32) #1

declare dso_local i32 @VNOP_REMOVE(i32, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
